2008-09-24  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Using list query with SQL LIKE wildcards does not work
	* Fixed bug #9408: Selecting by tag using wildcards does not work with database disposal of t3lib_cache
	* Fixed bug: Problems with listQuery at single pattern matching
	* Added RSA Authentication for back-end disposal (however it still has problems with decrypting)

2008-09-24  Dmitry Dulepov  <dmitry@typo3.org>

	* Added typo3/sysext/openid extension (stub generated by kickstarter)
	* Added PHP OpenID library to the openid extension
	* Moved OpenID fields to palettes under the "username" fields in fe_users/be_users
	* Added CSH for new fields
	* Added PHP OpenID library to the service code. Updated service class to match service type
	* Added code to connect to the OpenID server and request authentication
	* Fixed problem: default TYPO3 service (tx_sv_auth) prevented OpenID authentication
	* Added eID and Backend return scripts
	* Frontend user authentication is working with OpenID (tested with LiveJournal account)
	* Backend user authentication is working with OpenID (tested with LiveJournal and Yahoo accounts)
	* Add security to file-based OpenID store
	* Added necessary "unique" evaluations on the OpenID field
	* Patched OpenID library to use cURL proxy settings configured in TYPO3
	* openid system extension is reformatted with extdeveval
	* Added manual for the OpenID extension
	* Changed icons for contentrss and openid extensions

2008-09-24  Ingo Renner  <ingo@typo3.org>

	* Cleaned up some code regarding the page caching to prepare for transition to t3lib_cache
	* Added columns to cache_pages needed for the t3lib_cache DB backend
	* Fixed bug in t3lib_cache: t3lib_cache_AbstractCache->save() didn't request a lifetime parameter, but the cache backends do
	* Changed adding and retrieving a page to/from the cache (cache_pages) to use the t3lib_cache
	* Added a method flushByTags() to the t3lib_cache classes