@@ -1,1 +1,0 @@
-a:3:{s:4:"save";a:3:{s:13:"extension_key";s:7:"rsaauth";s:18:"print_wop_comments";s:1:"0";s:15:"overwrite_files";a:7:{s:9:"ChangeLog";s:1:"1";s:10:"README.txt";s:1:"1";s:12:"ext_icon.gif";s:1:"1";s:14:"ext_tables.php";s:1:"1";s:19:"doc/wizard_form.dat";s:1:"1";s:20:"doc/wizard_form.html";s:1:"1";s:28:"sv1/class.tx_rsaauth_sv1.php";s:1:"1";}}s:6:"emconf";a:1:{i:1;a:7:{s:5:"title";s:18:"RSA Authentication";s:11:"description";s:45:"RSA Authentication for front-end and back-end";s:8:"category";s:8:"services";s:5:"state";s:5:"alpha";s:12:"dependencies";s:0:"";s:6:"author";s:12:"Oliver Hader";s:12:"author_email";s:16:"oliver@typo3.org";}}s:2:"sv";a:1:{i:1;a:8:{s:5:"title";s:18:"RSA Authentication";s:11:"description";s:45:"RSA Authentication for front-end and back-end";s:4:"type";s:4:"auth";s:7:"subtype";s:41:"getUserFE,authUserFE,getUserBE,authUserBE";s:8:"priority";s:2:"80";s:7:"quality";s:2:"50";s:2:"os";s:0:"";s:4:"exec";s:0:"";}}}
