@@ -1,12 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-
-<html>
-<head>
-	<title>Untitled</title>
-</head>
-
-<body>
-
-	<table border="0" cellpadding="2" cellspacing="2"><tr bgcolor=""><td><strong><span style="font-family:verdana,arial,sans-serif; font-size:10px;">General info</span></strong></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;">Enter general information about the extension here: Title, description, category, author...</span></td></tr><tr><td></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Title:</strong><br /><a name="260dbfdff6"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][title]" value="RSA Authentication" style="width:200px;" onchange="setFormAnchorPoint('260dbfdff6');" title="WOP: [emconf][1][title]"></span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Description:</strong><br /><a name="e9cba6944a"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][description]" value="RSA Authentication for front-end and back-end" style="width:200px;" onchange="setFormAnchorPoint('e9cba6944a');" title="WOP: [emconf][1][description]"></span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Category:</strong><br /><a name="b46008f89f"></a><select name="kickstarter[wizArray_upd][emconf][1][category]" onchange="setFormAnchorPoint('b46008f89f');" title="WOP: [emconf][1][category]"><option value=""></option><option value="fe">Frontend</option><option value="plugin">Frontend Plugins</option><option value="be">Backend</option><option value="module">Backend Modules</option><option value="services" selected="selected">Services</option><option value="example">Examples</option><option value="misc">Miscellaneous</option><option value="templates">Templates</option><option value="doc">Documentation</option></select></span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>State</strong><br /><a name="dbd328a5a5"></a><select name="kickstarter[wizArray_upd][emconf][1][state]" onchange="setFormAnchorPoint('dbd328a5a5');" title="WOP: [emconf][1][state]"><option value="alpha" selected="selected">Alpha (Very initial development)</option><option value="beta">Beta (Under current development, should work partly)</option><option value="stable">Stable (Stable and used in production)</option><option value="experimental">Experimental (Nobody knows if this is going anywhere yet...)</option><option value="test">Test (Test extension, demonstrates concepts etc.)</option></select></span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Dependencies (comma list of extkeys):</strong><br /><a name="ce30f2d5ba"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][dependencies]" value="" style="width:200px;" onchange="setFormAnchorPoint('ce30f2d5ba');" title="WOP: [emconf][1][dependencies]"></span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Author Name:</strong><br /><a name="5317cdfcff"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][author]" value="Oliver Hader" style="width:200px;" onchange="setFormAnchorPoint('5317cdfcff');" title="WOP: [emconf][1][author]"></span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Author email:</strong><br /><a name="58289f4384"></a><input type="text" name="kickstarter[wizArray_upd][emconf][1][author_email]" value="oliver@typo3.org" style="width:200px;" onchange="setFormAnchorPoint('58289f4384');" title="WOP: [emconf][1][author_email]"></span></td></tr></table><hr /><table border="0" cellpadding="2" cellspacing="2"><tr bgcolor=""><td><strong><span style="font-family:verdana,arial,sans-serif; font-size:10px;">Services</span></strong></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;">Create a Services class. With a Services extension you can extend TYPO3 (or an extension which use Services) with functionality, without any changes to the code which use that service.</span></td></tr><tr><td></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Title:</strong><br /><a name="6528152373"></a><input type="text" name="kickstarter[wizArray_upd][sv][1][title]" value="RSA Authentication" style="width:200px;" onchange="setFormAnchorPoint('6528152373');" title="WOP: [sv][1][title]"></span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Description:</strong><br /><a name="ae7c1d3dca"></a><input type="text" name="kickstarter[wizArray_upd][sv][1][description]" value="RSA Authentication for front-end and back-end" style="width:200px;" onchange="setFormAnchorPoint('ae7c1d3dca');" title="WOP: [sv][1][description]"></span></td></tr><tr><td>&nbsp;</td><td></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Service type:</strong><br /><a name="044f08069c"></a><input type="text" name="kickstarter[wizArray_upd][sv][1][type]" value="auth" style="width:200px;" onchange="setFormAnchorPoint('044f08069c');" title="WOP: [sv][1][type]"><br />Enter here the key to define which type of service this should be.<br />Examples: "textExtract", "metaExtract".</span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Sub type(s) (comma list):</strong><br /><a name="0665700006"></a><input type="text" name="kickstarter[wizArray_upd][sv][1][subtype]" value="getUserFE,authUserFE,getUserBE,authUserBE" style="width:200px;" onchange="setFormAnchorPoint('0665700006');" title="WOP: [sv][1][subtype]"><br />Possible subtypes are defined by the service type.<br />You have read the service type documentation.<br />Example: using subtypes for file types (doc, txt, pdf, ...) the service might work for.</span></td></tr><tr><td>&nbsp;</td><td></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Priority:</strong><br /><a name="9aaa61e892"></a><select name="kickstarter[wizArray_upd][sv][1][priority]" onchange="setFormAnchorPoint('9aaa61e892');" title="WOP: [sv][1][priority]"><option value="50">default (50)</option><option value="10">very low (10)</option><option value="20">low (20)</option><option value="40">bit lower (40)</option><option value="60">bit higher (60)</option><option value="80" selected="selected">high (80)</option><option value="100">Very high (100)</option></select><br />50 = medium priority. <br />The priority of services can be changed by admin configuration.</span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Quality:</strong><br /><a name="57f1adad30"></a><input type="text" name="kickstarter[wizArray_upd][sv][1][quality]" value="50" style="width:200px;" onchange="setFormAnchorPoint('57f1adad30');" title="WOP: [sv][1][quality]"><br />The numbering of the quality is defined by the service type.<br />You have read the service type documentation.<br />The default quality range is 0-100.</span></td></tr><tr><td>&nbsp;</td><td></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>Operating System dependency:</strong><br /><a name="bc4f43e031"></a><select name="kickstarter[wizArray_upd][sv][1][os]" onchange="setFormAnchorPoint('bc4f43e031');" title="WOP: [sv][1][os]"><option value="" selected="selected">no special dependency</option><option value="unix">Unix only</option><option value="win">Windows only</option></select></span></td></tr><tr bgcolor=""><td><span style="font-family:verdana,arial,sans-serif; font-size:10px;"><strong>External program(s) (comma list):</strong><br /><a name="5c0f893372"></a><input type="text" name="kickstarter[wizArray_upd][sv][1][exec]" value="" style="width:200px;" onchange="setFormAnchorPoint('5c0f893372');" title="WOP: [sv][1][exec]"><br />Program(s) needed to run this service (eg. "perl").</span></td></tr></table>
-</body>
-</html>
