@@ -4,6 +4,7 @@
 	* Fixed bug #9408: Selecting by tag using wildcards does not work with database disposal of t3lib_cache
 	* Fixed bug: Problems with listQuery at single pattern matching
 	* Added RSA Authentication for back-end disposal (however it still has problems with decrypting)
+	* Clean up: Removed wizard data created by kickstarted from rsaauth extension
 
 2008-09-24  Dmitry Dulepov  <dmitry@typo3.org>
 
